k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipam
  namespace: ipam
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ipam.lab.axtarbyte.com
      secretName: ipam-tls-prod
  rules:
    - host: ipam.lab.axtarbyte.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ipam-frontend
                port:
                  number: 80
